Added work chronology

--- a/about.html
+++ b/about.html
@@ -26,13 +26,16 @@
         <div class="navmenu">
             <ul>
                 <li>
-                    <a href="#" onclick="showExperience()">Experience</a>
+                    <a onclick="showExperience()">Experience</a>
                 </li>
                 <li>
-                    <a href="#" onclick="showResume()">Resume</a>
+                    <a onclick="showResume()">Resume</a>
                 </li>
                 <li>
-                    <a href="#" onclick="showTranscript()">Education</a>
+                    <a onclick="showTranscript()">Education</a>
+                </li>
+                <li>
+                    <a onclick="showChronology()">Chronology</a>
                 </li>
             </ul>
         </div>
@@ -219,6 +222,85 @@
                     <iframe src="http://localhost:55104/docs/unofficialbrocktranscript.pdf" frameborder="0" style="min-width: 960px; min-height: 720px"></iframe>
                 </div>
             </div>
+            <div id="chronologyContent" class="this-site-content">
+                <div class="blog-post" style="min-width: 960px; min-height: 720px">
+                    <h4>Chronological Work Experience</h4>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td><h5>July 2013 ~ Present</h5></td>
+                                <td><h5>Camis, Inc.</h5></td>
+                                <td><h5>Software Developer</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>May 2011 ~ August 2012</h5></td>
+                                <td><h5>Phoenix Interactive Design, Inc.</h5></td>
+                                <td><h5>Software Engineer Intern</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>February 2012 ~ April 2012</h5></td>
+                                <td><h5>Liberty Tax Service</h5></td>
+                                <td><h5>Tax Preparer</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>February 2011 ~ April 2011</h5></td>
+                                <td><h5>Liberty Tax Service</h5></td>
+                                <td><h5>Tax Preparer</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>June 2010 ~ August 2010</h5></td>
+                                <td><h5>Formet Industries</h5></td>
+                                <td><h5>Team Member</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>February 2010 ~ April 2010</h5></td>
+                                <td><h5>Liberty Tax Service</h5></td>
+                                <td><h5>Tax Preparer</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>May 2009 ~ August 2009</h5></td>
+                                <td><h5>Gerald Murray Landscaping</h5></td>
+                                <td><h5>Landscaper</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>February 2009 ~ April 2009</h5></td>
+                                <td><h5>Liberty Tax Service</h5></td>
+                                <td><h5>Tax Preparer</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>September 2007 ~ April 2008</h5></td>
+                                <td><h5>Graham Scott Enns, LLP</h5></td>
+                                <td><h5>Staff Accountant</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>January 2007 ~ April 2007</h5></td>
+                                <td><h5>Graham Scott Enns, LLP</h5></td>
+                                <td><h5>Staff Accountant</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>May 2006 ~ August 2006</h5></td>
+                                <td><h5>Graham Scott Enns, LLP</h5></td>
+                                <td><h5>Staff Accountant</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>July 2005 ~ August 2005</h5></td>
+                                <td><h5>Formet Industries</h5></td>
+                                <td><h5>Team Member</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>July 2004 ~ August 2004</h5></td>
+                                <td><h5>Formet Industries</h5></td>
+                                <td><h5>Team Member</h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5>June 2003 ~ May 2005</h5></td>
+                                <td><h5>Zehrs Food Plus/Real Canadian Superstore</h5></td>
+                                <td><h5>Bakery Clerk</h5></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -227,18 +309,28 @@
             document.getElementById("experienceContent").style.display = "block";
             document.getElementById("resumeContent").style.display = "none";
             document.getElementById("transcriptContent").style.display = "none";
+            document.getElementById("chronologyContent").style.display = "none";
         }
 
         function showResume() {
             document.getElementById("experienceContent").style.display = "none";
             document.getElementById("resumeContent").style.display = "block";
             document.getElementById("transcriptContent").style.display = "none";
+            document.getElementById("chronologyContent").style.display = "none";
         }
 
         function showTranscript() {
             document.getElementById("experienceContent").style.display = "none";
             document.getElementById("resumeContent").style.display = "none";
             document.getElementById("transcriptContent").style.display = "block";
+            document.getElementById("chronologyContent").style.display = "none";
+        }
+
+        function showChronology() {
+            document.getElementById("experienceContent").style.display = "none";
+            document.getElementById("resumeContent").style.display = "none";
+            document.getElementById("transcriptContent").style.display = "none";
+            document.getElementById("chronologyContent").style.display = "block";
         }
     </script>
 </body>
